openspending/subsidystories.eu#10 Unwanted scrollbars in embedded visualizations

--- a/app/front/scripts/directives/visualizations/bubbletree/template.html
+++ b/app/front/scripts/directives/visualizations/bubbletree/template.html
@@ -1,7 +1,7 @@
-<div class="col-xs-12">
+<div class="clearfix">
   <breadcrumbs breadcrumbs="params.breadcrumbs"></breadcrumbs>
 </div>
-<div class="x-visualization-chart col-xs-12">
+<div class="x-visualization-chart clearfix">
   <bubbletree ng-if="isVisible"
     downloader="downloader"
     cube="{{ params.packageId }}"
