--- a/app/front/scripts/directives/visualizations/linechart/template.html
+++ b/app/front/scripts/directives/visualizations/linechart/template.html
@@ -1,4 +1,4 @@
-<div class="x-visualization-chart col-xs-12">
+<div class="x-visualization-chart clearfix">
   <chart ng-if="isVisible"
     downloader="downloader"
     type="line"
