--- a/app/front/scripts/directives/visualizations/map/template.html
+++ b/app/front/scripts/directives/visualizations/map/template.html
@@ -1,4 +1,4 @@
-<div class="x-visualization-chart col-xs-12">
+<div class="x-visualization-chart clearfix">
   <geo-view ng-if="isVisible"
     downloader="downloader"
     cube="{{ params.packageId }}"
