--- a/app/front/scripts/directives/visualizations/barchart/template.html
+++ b/app/front/scripts/directives/visualizations/barchart/template.html
@@ -1,10 +1,10 @@
-<div class="col-xs-12" ng-if="!params.isEmbedded">
+<div ng-if="!params.isEmbedded" class="clearfix">
   <sorting-control
     selected="params.orderBy"
     items="params.availableSoring">
   </sorting-control>
 </div>
-<div class="x-visualization-chart col-xs-12">
+<div class="x-visualization-chart clearfix">
   <chart ng-if="isVisible"
     downloader="downloader"
     type="bar"
