--- a/app/front/scripts/directives/visualizations/pivottable/template.html
+++ b/app/front/scripts/directives/visualizations/pivottable/template.html
@@ -1,10 +1,10 @@
-<div class="col-xs-12" ng-if="!params.isEmbedded">
+<div ng-if="!params.isEmbedded" class="clearfix">
   <export-control
     target-selector="#babbage-pivot-table"
     file-name="{{ state.availablePackages.current }}"
   ></export-control>
 </div>
-<div class="x-visualization-chart col-xs-12">
+<div class="x-visualization-chart clearfix">
   <pivot-table ng-if="isVisible" id="babbage-pivot-table"
     downloader="downloader"
     cube="{{ params.packageId }}"
