Add missing translations (openspending/openspending#1218 and openspending/openspending#1211)

--- a/app/front/scripts/directives/visualizations/linechart/template.html
+++ b/app/front/scripts/directives/visualizations/linechart/template.html
@@ -5,6 +5,7 @@
     cube="{{ params.packageId }}"
     state="state"
     format-value="formatValue"
+    messages="messages"
     endpoint="{{ params.babbageApiUrl }}">
   </chart>
 </div>
