--- a/app/front/scripts/directives/visualizations/map/template.html
+++ b/app/front/scripts/directives/visualizations/map/template.html
@@ -4,6 +4,7 @@
     cube="{{ params.packageId }}"
     state="state"
     format-value="formatValue"
+    messages="messages"
     endpoint="{{ params.babbageApiUrl }}"
     cosmo-endpoint="{{ params.cosmopolitanApiUrl }}"
     currency-sign="{{ params.currencySign }}"
