--- a/app/front/scripts/directives/visualizations/radar/template.html
+++ b/app/front/scripts/directives/visualizations/radar/template.html
@@ -11,6 +11,7 @@
       cube="{{ params.packageId }}"
       state="state"
       format-value="formatValue"
+      messages="messages"
       endpoint="{{ params.babbageApiUrl }}">
     </radar-chart>
   </div>
