--- a/app/front/scripts/directives/visualizations/table/template.html
+++ b/app/front/scripts/directives/visualizations/table/template.html
@@ -10,6 +10,7 @@
     cube="{{ params.packageId }}"
     state="state"
     format-value="formatValue"
+    messages="messages"
     endpoint="{{ params.babbageApiUrl }}">
   </babbage-table>
 </div>
