--- a/app/front/scripts/directives/visualizations/bubbletree/template.html
+++ b/app/front/scripts/directives/visualizations/bubbletree/template.html
@@ -7,6 +7,7 @@
     cube="{{ params.packageId }}"
     state="state"
     format-value="formatValue"
+    messages="messages"
     endpoint="{{ params.babbageApiUrl }}">
   </bubbletree>
 </div>
