--- a/app/front/scripts/directives/visualizations/facts/template.html
+++ b/app/front/scripts/directives/visualizations/facts/template.html
@@ -3,5 +3,6 @@
   cube="{{ params.packageId }}"
   state="state"
   format-value="formatValue"
+  messages="messages"
   endpoint="{{ params.babbageApiUrl }}">
 </facts>
