--- a/app/front/scripts/directives/visualizations/pivottable/template.html
+++ b/app/front/scripts/directives/visualizations/pivottable/template.html
@@ -10,8 +10,8 @@
     cube="{{ params.packageId }}"
     state="state"
     format-value="formatValue"
+    messages="messages"
     max-value-limit="1998"
-    max-value-message="{{ 'Too much data error message' | i18n }}"
     endpoint="{{ params.babbageApiUrl }}">
   </pivot-table>
 </div>
