Become scheme agnostic

--- a/app/front/scripts/directives/visualizations/visualization-container/visualization-share-popover/template.html
+++ b/app/front/scripts/directives/visualizations/visualization-container/visualization-share-popover/template.html
@@ -19,9 +19,9 @@
   </div>
 
   <div>
-    <a ng-href="{{ 'https://twitter.com/share?url=' + (shortShareUrl | urlencode) }}"
+    <a ng-href="{{ '//twitter.com/share?url=' + (shortShareUrl | urlencode) }}"
       class="btn btn-inverse" target="_blank"><i class="fa fa-twitter margin-right-4"></i>Twitter</a>
-    <a ng-href="{{ 'http://www.facebook.com/sharer/sharer.php?u=' + (shortShareUrl | urlencode) }}"
+    <a ng-href="{{ '//www.facebook.com/sharer/sharer.php?u=' + (shortShareUrl | urlencode) }}"
       class="btn btn-inverse margin-left-12" target="_blank"><i class="fa fa-facebook-official margin-right-4"></i>Facebook</a>
   </div>
 </form>
