[#1197] Limit pie chart to 5 slices and add i18n("others")
The slice that groups the smaller values can't be clicked on, as it makes no
sense to drill down in multiple categories.

Fixes openspending/openspending#1197

--- a/app/front/scripts/directives/visualizations/piechart/template.html
+++ b/app/front/scripts/directives/visualizations/piechart/template.html
@@ -8,6 +8,7 @@
     state="state"
     format-value="formatValue"
     messages="messages"
-    endpoint="{{ params.babbageApiUrl }}">
+    endpoint="{{ params.babbageApiUrl }}"
+    max-slices="5">
   </pie-chart>
 </div>
