--- a/app/front/scripts/directives/visualizations/sankey/template.html
+++ b/app/front/scripts/directives/visualizations/sankey/template.html
@@ -8,6 +8,8 @@
     state="state"
     format-value="formatValue"
     messages="messages"
-    endpoint="{{ params.babbageApiUrl }}">
+    endpoint="{{ params.babbageApiUrl }}"
+    color-scale="colorScale"
+  >
   </san-key-chart>
 </div>
