--- a/app/front/scripts/directives/visualizations/barchart/template.html
+++ b/app/front/scripts/directives/visualizations/barchart/template.html
@@ -12,6 +12,7 @@
     state="state"
     format-value="formatValue"
     messages="messages"
-    endpoint="{{ params.babbageApiUrl }}">
+    endpoint="{{ params.babbageApiUrl }}"
+    color-scale="colorScale">
   </chart>
 </div>
