--- a/app/front/scripts/directives/visualizations/linechart/template.html
+++ b/app/front/scripts/directives/visualizations/linechart/template.html
@@ -6,6 +6,7 @@
     state="state"
     format-value="formatValue"
     messages="messages"
-    endpoint="{{ params.babbageApiUrl }}">
+    endpoint="{{ params.babbageApiUrl }}"
+    color-scale="colorScale">
   </chart>
 </div>
