--- a/app/front/scripts/directives/visualizations/radar/template.html
+++ b/app/front/scripts/directives/visualizations/radar/template.html
@@ -12,7 +12,9 @@
       state="state"
       format-value="formatValue"
       messages="messages"
-      endpoint="{{ params.babbageApiUrl }}">
+      endpoint="{{ params.babbageApiUrl }}"
+      color-scale="colorScale"
+    >
     </radar-chart>
   </div>
 </div>
