--- a/app/front/scripts/directives/visualizations/treemap/template.html
+++ b/app/front/scripts/directives/visualizations/treemap/template.html
@@ -8,6 +8,7 @@
     state="state"
     format-value="formatValue"
     messages="messages"
-    endpoint="{{ params.babbageApiUrl }}">
+    endpoint="{{ params.babbageApiUrl }}"
+    color-scale="colorScale">
   </tree-map>
 </div>
