[#1198] Change bubbletree's colors depending if node's value is positive or negative
Fixes openspending/openspending#1198

--- a/app/front/scripts/directives/visualizations/bubbletree/template.html
+++ b/app/front/scripts/directives/visualizations/bubbletree/template.html
@@ -7,6 +7,7 @@
     cube="{{ params.packageId }}"
     state="state"
     format-value="formatValue"
+    get-style="getStyle"
     messages="messages"
     endpoint="{{ params.babbageApiUrl }}">
   </bubbletree>
