Add breadcrumb to barchart drilldown.
Part of openspending/openspending#1282

--- a/app/front/scripts/directives/visualizations/barchart/template.html
+++ b/app/front/scripts/directives/visualizations/barchart/template.html
@@ -1,3 +1,6 @@
+<div class="clearfix">
+  <breadcrumbs breadcrumbs="params.breadcrumbs"></breadcrumbs>
+</div>
 <div ng-if="!params.isEmbedded" class="clearfix">
   <sorting-control
     selected="params.orderBy"
