Add donut chart visualisation directive
Bumps babbage.ui to 1.6.3 to use donut vis.

Part of openspending/openspending#1298

--- a/app/front/scripts/directives/visualizations/visualization-container/template.html
+++ b/app/front/scripts/directives/visualizations/visualization-container/template.html
@@ -2,6 +2,7 @@
   <div ng-switch="visualization.id">
     <treemap-visualization ng-switch-when="Treemap" params="params"></treemap-visualization>
     <pie-chart-visualization ng-switch-when="PieChart" params="params"></pie-chart-visualization>
+    <donut-chart-visualization ng-switch-when="DonutChart" params="params"></donut-chart-visualization>
     <bar-chart-visualization ng-switch-when="BarChart" params="params"></bar-chart-visualization>
     <sankey-visualization ng-switch-when="Sankey" params="params"></sankey-visualization>
     <line-chart-visualization ng-switch-when="LineChart" params="params"></line-chart-visualization>
