--- a/app/front/scripts/directives/visualizations/barchart/template.html
+++ b/app/front/scripts/directives/visualizations/barchart/template.html
@@ -4,7 +4,7 @@
 <div ng-if="!params.isEmbedded" class="clearfix">
   <sorting-control
     selected="params.orderBy"
-    items="params.availableSoring">
+    items="params.availableSorting">
   </sorting-control>
 </div>
 <div class="x-visualization-chart clearfix">
