--- a/app/front/scripts/directives/visualizations/table/template.html
+++ b/app/front/scripts/directives/visualizations/table/template.html
@@ -1,7 +1,7 @@
 <div ng-if="!params.isEmbedded" class="clearfix">
   <sorting-control
     selected="params.orderBy"
-    items="params.availableSoring">
+    items="params.availableSorting">
   </sorting-control>
 </div>
 <div class="x-visualization-chart clearfix">
