Get the comments right
Related to openspending/openspending#1364

--- a/app/front/scripts/directives/package-info/template.html
+++ b/app/front/scripts/directives/package-info/template.html
@@ -1,4 +1,4 @@
-{{!-- <div class="margin-top-12 margin-bottom-12">
+<!--<div class="margin-top-12 margin-bottom-12">
   <a ng-if="login.isLoggedIn && datamineUrl" class="btn btn-primary" ng-href="{{ datamineUrl }}" target="_blank">
     <i class="fa fa-diamond vertical-align-middle margin-right-4"></i>
     {{  'Analyse this data set in the Data Mine' | i18n }}
@@ -7,7 +7,7 @@
     <i class="fa fa-diamond vertical-align-middle margin-right-4"></i>
     {{  'Log-in to analyse this data set in the Data Mine' | i18n }}
   </a>
-</div> --}}
+</div> -->
 <div ng-if="!!datapackage.url || (datapackage.resources.length > 0)" class="x-package-info">
   <h4>{{ 'Data Resources' | i18n }}</h4>
   <div ng-if="!!datapackage.url">
