[WIP] Bind prefetched model to babbage-ui directives

--- a/app/front/scripts/directives/visualizations/donutchart/template.html
+++ b/app/front/scripts/directives/visualizations/donutchart/template.html
@@ -7,6 +7,7 @@
     cube="{{ params.packageId }}"
     type="donut"
     state="state"
+    model="model"
     format-value="formatValue"
     messages="messages"
     endpoint="{{ params.babbageApiUrl }}"
