--- a/app/front/scripts/directives/visualizations/facts/template.html
+++ b/app/front/scripts/directives/visualizations/facts/template.html
@@ -1,6 +1,7 @@
 <facts ng-if="isVisible"
   downloader="downloader"
   cube="{{ params.packageId }}"
+  model="model"
   state="state"
   format-value="formatValue"
   messages="messages"
