--- a/app/front/scripts/directives/visualizations/pivottable/template.html
+++ b/app/front/scripts/directives/visualizations/pivottable/template.html
@@ -9,6 +9,7 @@
     downloader="downloader"
     cube="{{ params.packageId }}"
     state="state"
+    model="model"
     format-value="formatValue"
     messages="messages"
     max-value-limit="1998"
