--- a/app/front/scripts/directives/visualizations/barchart/template.html
+++ b/app/front/scripts/directives/visualizations/barchart/template.html
@@ -12,6 +12,7 @@
     downloader="downloader"
     type="bar"
     cube="{{ params.packageId }}"
+    model="model"
     state="state"
     format-value="formatValue"
     messages="messages"
