--- a/app/front/scripts/directives/visualizations/bubbletree/template.html
+++ b/app/front/scripts/directives/visualizations/bubbletree/template.html
@@ -6,6 +6,7 @@
     downloader="downloader"
     cube="{{ params.packageId }}"
     state="state"
+    model="model"
     format-value="formatValue"
     get-style="getStyle"
     messages="messages"
