--- a/app/front/scripts/directives/visualizations/map/template.html
+++ b/app/front/scripts/directives/visualizations/map/template.html
@@ -3,6 +3,7 @@
     downloader="downloader"
     cube="{{ params.packageId }}"
     state="state"
+    model="model"
     format-value="formatValue"
     messages="messages"
     endpoint="{{ params.babbageApiUrl }}"
