--- a/app/front/scripts/directives/visualizations/sankey/template.html
+++ b/app/front/scripts/directives/visualizations/sankey/template.html
@@ -6,6 +6,7 @@
     downloader="downloader"
     cube="{{ params.packageId }}"
     state="state"
+    model="model"
     format-value="formatValue"
     messages="messages"
     endpoint="{{ params.babbageApiUrl }}"
