--- a/app/front/scripts/directives/visualizations/table/template.html
+++ b/app/front/scripts/directives/visualizations/table/template.html
@@ -8,6 +8,7 @@
   <babbage-table ng-if="isVisible"
     downloader="downloader"
     cube="{{ params.packageId }}"
+    model="model"
     state="state"
     format-value="formatValue"
     messages="messages"
